// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > can accept formatted options array 1`] = `
<DocumentFragment>
  <div
    class="mdc-select rmwc-select__default-width mdc-select--filled"
  >
    <div
      aria-disabled="false"
      aria-haspopup="listbox"
      aria-labelledby="select-test-label"
      class="mdc-select__anchor"
      role="button"
      tabindex="-1"
    >
      <span
        class="mdc-line-ripple mdc-line-ripple--deactivating"
        style="transform-origin: 0px center;"
      />
      <span
        class="mdc-floating-label mdc-floating-label--float-above"
        for="select-test"
        id="select-test-label"
      >
        test
      </span>
      <span
        class="mdc-select__selected-text-container"
      >
        <span
          class="mdc-select__selected-text"
        >
          Select a food
        </span>
      </span>
      <span
        class="mdc-select__dropdown-icon"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-inactive"
        >
          arrow_drop_down
        </i>
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-active"
        >
          arrow_drop_up
        </i>
      </span>
      <select
        class="rmwc-select__native-control"
        id="select-test"
        tabindex="0"
      >
        <option
          disabled=""
          selected=""
          value=""
        >
          Select a food
        </option>
        <option
          value="1"
        >
          Cookies
        </option>
        <option
          aria-disabled="true"
          tabindex="-1"
          value="2"
        >
          Pizza
        </option>
        <option
          value="3"
        >
          Icecream
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select > can accept options array 1`] = `
<DocumentFragment>
  <div
    class="mdc-select rmwc-select__default-width mdc-select--filled"
  >
    <div
      aria-disabled="false"
      aria-haspopup="listbox"
      aria-labelledby="select-test-label"
      class="mdc-select__anchor"
      role="button"
      tabindex="-1"
    >
      <span
        class="mdc-line-ripple mdc-line-ripple--deactivating"
        style="transform-origin: 0px center;"
      />
      <span
        class="mdc-floating-label mdc-floating-label--float-above"
        for="select-test"
        id="select-test-label"
      >
        test
      </span>
      <span
        class="mdc-select__selected-text-container"
      >
        <span
          class="mdc-select__selected-text"
        >
          Select a food
        </span>
      </span>
      <span
        class="mdc-select__dropdown-icon"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-inactive"
        >
          arrow_drop_down
        </i>
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-active"
        >
          arrow_drop_up
        </i>
      </span>
      <select
        class="rmwc-select__native-control"
        id="select-test"
        tabindex="0"
      >
        <option
          disabled=""
          selected=""
          value=""
        >
          Select a food
        </option>
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select > can have custom rootProps 1`] = `
<DocumentFragment>
  <div
    class="mdc-select rmwc-select__default-width mdc-select--filled"
    name="test"
  >
    <div
      aria-disabled="false"
      aria-haspopup="listbox"
      aria-labelledby="select-test-label"
      class="mdc-select__anchor"
      role="button"
      tabindex="-1"
    >
      <span
        class="mdc-line-ripple mdc-line-ripple--deactivating"
        style="transform-origin: 0px center;"
      />
      <span
        class="mdc-floating-label"
        for="select-test"
        id="select-test-label"
      >
        test
      </span>
      <span
        class="mdc-select__selected-text-container"
      >
        <span
          class="mdc-select__selected-text"
        />
      </span>
      <span
        class="mdc-select__dropdown-icon"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-inactive"
        >
          arrow_drop_down
        </i>
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-active"
        >
          arrow_drop_up
        </i>
      </span>
      <select
        class="rmwc-select__native-control"
        id="select-test"
        tabindex="0"
      >
        <option
          disabled=""
          selected=""
          value=""
        />
      </select>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select > renders 1`] = `
<DocumentFragment>
  <div
    class="mdc-select rmwc-select__default-width mdc-select--filled"
  >
    <div
      aria-disabled="false"
      aria-haspopup="listbox"
      aria-labelledby="select-test-label"
      class="mdc-select__anchor"
      role="button"
      tabindex="-1"
    >
      <span
        class="mdc-line-ripple mdc-line-ripple--deactivating"
        style="transform-origin: 0px center;"
      />
      <span
        class="mdc-floating-label mdc-floating-label--float-above"
        for="select-test"
        id="select-test-label"
      >
        test
      </span>
      <span
        class="mdc-select__selected-text-container"
      >
        <span
          class="mdc-select__selected-text"
        >
          Select a food
        </span>
      </span>
      <span
        class="mdc-select__dropdown-icon"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-inactive"
        >
          arrow_drop_down
        </i>
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-active"
        >
          arrow_drop_up
        </i>
      </span>
      <select
        class="rmwc-select__native-control"
        id="select-test"
        tabindex="0"
      >
        <option
          disabled=""
          selected=""
          value=""
        >
          Select a food
        </option>
        <option
          value="1"
        >
          Cookies
        </option>
        <option
          value="2"
        >
          Pizza
        </option>
        <option
          value="3"
        >
          Icecream
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select: Lifecycle > Select matches snapshot when enhanced and renderToPortal 1`] = `
<DocumentFragment>
  <div
    class="mdc-menu-surface--anchor"
  >
    <div
      class="mdc-select rmwc-select__default-width mdc-select--filled"
    >
      <div
        aria-disabled="false"
        aria-haspopup="listbox"
        aria-labelledby="select-test-label"
        class="mdc-select__anchor"
        role="button"
        tabindex="0"
      >
        <span
          class="mdc-line-ripple mdc-line-ripple--deactivating"
          style="transform-origin: 0px center;"
        />
        <span
          class="mdc-floating-label"
          for="select-test"
          id="select-test-label"
        >
          test
        </span>
        <span
          class="mdc-select__selected-text-container"
        >
          <span
            class="mdc-select__selected-text"
          />
        </span>
        <span
          class="mdc-select__dropdown-icon"
        >
          <i
            class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-inactive"
          >
            arrow_drop_down
          </i>
          <i
            class="rmwc-icon rmwc-icon--ligature material-icons mdc-select__dropdown-icon-active"
          >
            arrow_drop_up
          </i>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
